[HOTFIX] Some basic fixs for 1.3.0 release
[HOTFIX] Some basic fixs for 1.3.0 release

--- a/integration/spark2/pom.xml
+++ b/integration/spark2/pom.xml
@@ -209,6 +209,9 @@
     </profile>
     <profile>
     <id>spark-2.2</id>
+    <activation>
+      <activeByDefault>true</activeByDefault>
+    </activation>
     <properties>
       <spark.version>2.2.1</spark.version>
       <scala.binary.version>2.11</scala.binary.version>
