--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
   <inceptionYear>2016</inceptionYear>
   <packaging>pom</packaging>
 
-  <version>1.3.0-SNAPSHOT</version>
+  <version>1.3.0</version>
 
   <licenses>
     <license>
@@ -49,7 +49,7 @@
     <connection>scm:git:https://git-wip-us.apache.org/repos/asf/carbondata.git</connection>
     <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/carbondata.git</developerConnection>
     <url>https://git-wip-us.apache.org/repos/asf/carbondata.git</url>
-    <tag>HEAD</tag>
+    <tag>apache-carbondata-1.3.0-rc2</tag>
   </scm>
 
   <issueManagement>
