--- a/integration/spark2/pom.xml
+++ b/integration/spark2/pom.xml
@@ -50,6 +50,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
