--- a/integration/spark-common/pom.xml
+++ b/integration/spark-common/pom.xml
@@ -63,6 +63,7 @@
     <dependency>
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_${scala.binary.version}</artifactId>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
