add text_columns DataMap property

--- a/datamap/lucene/pom.xml
+++ b/datamap/lucene/pom.xml
@@ -96,6 +96,11 @@
       <artifactId>scalatest_${scala.binary.version}</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
+    </dependency>
   </dependencies>
 
   <build>
