--- a/streaming/pom.xml
+++ b/streaming/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>carbondata-parent</artifactId>
     <groupId>org.apache.carbondata</groupId>
-    <version>1.3.1-SNAPSHOT</version>
+    <version>1.3.1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
