[CARBONDATA-2234] Support UTF-8 with BOM in CSVInputFormat
This closes #2038

--- a/integration/presto/pom.xml
+++ b/integration/presto/pom.xml
@@ -484,6 +484,11 @@
       <artifactId>hk2-utils</artifactId>
       <version>2.5.0-b42</version>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.4</version>
+    </dependency>
 
   </dependencies>
 
