--- a/pom.xml
+++ b/pom.xml
@@ -99,9 +99,10 @@
     <module>core</module>
     <module>processing</module>
     <module>hadoop</module>
-    <module>store/sdk</module>
     <module>integration/spark-common</module>
     <module>integration/spark-common-test</module>
+    <module>datamap/examples</module>
+    <module>store/sdk</module>
     <module>assembly</module>
   </modules>
 
@@ -266,6 +267,7 @@
         <groupId>org.scalatest</groupId>
         <artifactId>scalatest_${scala.binary.version}</artifactId>
         <version>2.2.1</version>
+        <scope>test</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
@@ -342,7 +344,6 @@
         <artifactId>findbugs-maven-plugin</artifactId>
         <version>3.0.4</version>
         <configuration>
-          <skip>true</skip>
           <excludeFilterFile>${dev.path}/findbugs-exclude.xml</excludeFilterFile>
           <failOnError>true</failOnError>
           <findbugsXmlOutput>true</findbugsXmlOutput>
@@ -444,7 +445,6 @@
         <module>format</module>
         <module>integration/spark2</module>
         <module>examples/spark2</module>
-        <module>datamap/examples</module>
         <module>integration/hive</module>
         <module>integration/presto</module>
         <module>examples/flink</module>
@@ -481,8 +481,6 @@
         <module>integration/presto</module>
         <module>streaming</module>
         <module>examples/spark2</module>
-        <module>datamap/examples</module>
-        <module>datamap/lucene</module>
       </modules>
       <build>
         <plugins>
@@ -629,6 +627,20 @@
       <properties>
         <script.exetension>.bat</script.exetension>
       </properties>
+    </profile>
+    <profile>
+      <id>lucene</id>
+      <modules>
+        <module>datamap/lucene</module>
+      </modules>
+    </profile>
+    <profile>
+      <id>mv</id>
+      <modules>
+        <module>datamap/mv/core</module>
+        <module>datamap/mv/plan</module>
+        <module>tools/advisor</module>
+      </modules>
     </profile>
   </profiles>
 
