[HOTFIX] Fix unsafe load in test case
Unsafe Load fails for dictionary columns because of refactoring

This closes #2051

--- a/pom.xml
+++ b/pom.xml
@@ -481,6 +481,7 @@
         <module>integration/presto</module>
         <module>streaming</module>
         <module>examples/spark2</module>
+        <module>datamap/lucene</module>
       </modules>
       <build>
         <plugins>
