--- a/store/sdk/pom.xml
+++ b/store/sdk/pom.xml
@@ -43,6 +43,8 @@
   </dependencies>
 
   <build>
+    <sourceDirectory>src/main/java</sourceDirectory>
+    <testSourceDirectory>src/test/java</testSourceDirectory>
     <resources>
       <resource>
         <directory>src/resources</directory>
