--- a/integration/presto/pom.xml
+++ b/integration/presto/pom.xml
@@ -488,6 +488,11 @@
       <artifactId>commons-io</artifactId>
       <version>2.4</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-catalyst_${scala.binary.version}</artifactId>
+      <version>${spark.version}</version>
+    </dependency>
 
   </dependencies>
 
